# claude-patterns

./: .gitignore  README.md  install.sh  pyproject.toml
docs/: DISTRIBUTION.md  INSTALL.md  PUBLISHING.md  SETUP.md
src/claude_patterns/: __init__.py  __main__.py  cli.py  clustering.py  extraction.py  generation.py  output.py  prompts.py
tests/: __init__.py  test_sdk_auth.py  test_sdk_response.py
